--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    line-height: 1.6;
+    line-height: 1.6;     
     background-color: #121212;
     color: #ffffff;
 }
@@ -128,6 +128,7 @@ body {
 .projects .card-title {
     color: #00bcd4;
     margin-bottom: 1rem;
+    text-decoration: none;
 }
 
 /* Skills Section */
@@ -277,3 +278,4 @@ footer {
         display: flex;
     }
 }
+
