--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     position: static;
     top: 2px;
     z-index: 100;
-    height: 60px;
+    height: 55px;
 }
 
 .navbar .logo {
@@ -34,12 +34,17 @@ body {
     display: flex;
     align-items: center;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+    
 }
 
 .navbar .logo img {
-    border-radius: 56%;
+    border-radius: 50%;
     margin-right: 120px;
-    height: 40px;
+    height: 35px;
+    width: 30px;
+    object-fit: cover;
+    object-position: 70% 27%;
+    
 }
 
 .nav-links {
@@ -92,8 +97,13 @@ body {
 }
 
 .hero img {
-    border: 3px solid #00bcd4;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  width: 130px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: top center;
+/* object-view-box: cover; */
+  box-shadow: 0 0 20px rgba(0, 255, 255, 0.6);
 }
 
 /* Projects Section */
@@ -120,15 +130,23 @@ body {
     background: linear-gradient(rgb(249, 249, 241),skyblue,rgb(231, 191, 116));
 }
 
+a,
+a:hover,
+a:focus {
+  text-decoration: none !important;
+}
+
 .projects .card:hover {
     transform: translateY(-5px);
     box-shadow: 0 6px 15px rgba(46, 8, 8, 0.3);
+    text-decoration: none;
 }
 
 .projects .card-title {
     color: #00bcd4;
     margin-bottom: 1rem;
-    text-decoration: none;
+    text-decoration: none !important;
+
 }
 
 /* Skills Section */
@@ -175,8 +193,8 @@ body {
 
     #skills .col-4 {
         width: auto; /* Reset width for larger screens */
-        flex: 1 1 calc(33.333% - 30px); /* Three items per row */
-        max-width: calc(33.333% - 30px); /* Constrain item width */
+        flex: 1 1 calc(25% - 30px); /* Three items per row */
+        max-width: calc(25% - 30px); /* Constrain item width */
     }
     
 }
